# ScientificGUI

./: CMakeLists.txt
util/: CMakeLists.txt
util/include/: InMemoryBinary.h  InMemoryBinaryAccessor.h  InMemoryBinaryPool.h  InterprocessAccessRole.h  InterprocessSingleton.hpp  SmartArray.hpp
util/src/: InMemoryBinary.cpp  InMemoryBinaryAccessor.cpp  InMemoryBinaryPool.cpp
util/test/: test_InMemoryBinary.cpp  test_Main.cpp
util/test_multi_process/: CMakeLists.txt  test_InMemoryBinaryPool_case_1.cpp  test_InterprocessSingleton_case_1.cpp
